--- a/apigateway-service.yml
+++ b/apigateway-service.yml
@@ -10,7 +10,7 @@
     # Cloud Configuration (통합)
     cloud:
       bus:
-        enabled: false
+        enabled: true
       gateway:
         routes:
           # Route 0: User Service - Public API
@@ -64,9 +64,17 @@
 
     # RabbitMQ Configuration
     rabbitmq:
+      host: 127.0.0.1
+      port: 5672
+      username: greenbasket
+      password: greenbasket
       listener:
         simple:
-          auto-startup: false
+          auto-startup: true
+
+    cloud:
+      bus:
+        enabled: true 
 
   # JWT Token Configuration
   token:
