--- a/order-service.yml
+++ b/order-service.yml
@@ -62,7 +62,7 @@
     endpoints:
       web:
         exposure:
-          include: refresh,health,beans,info
+          include: refresh,health,beans,info,busrefresh
     health:
       rabbit:
         enabled: false
