feat: RabbitMQ 설정 추가 및 Spring Cloud Bus 활성화

--- a/user-service.yml
+++ b/user-service.yml
@@ -65,7 +65,7 @@
 
   # Custom Properties
   greeting:
-    message: Welcome to the Green-Bascket!!
+    message: Welcome to the Green-Bascket!!!
 
   # Logging
   logging:
