--- a/order-service.yml
+++ b/order-service.yml
@@ -66,3 +66,11 @@
     health:
       rabbit:
         enabled: false
+
+  # Order Service Exception Messages
+  order-service:
+    exception:
+      products-not-found: "주문 실패: 상품을 찾을 수 없습니다."
+      order-creation-decrease-failed: "주문 실패: 재고 부족 또는 일시적 오류일 수 있습니다."
+
+      
