feat: catalog-service 재구부족 Exception 설정

--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -79,3 +79,5 @@
       products-not-found: "요청한 상품을 찾을 수 없습니다"
       invalid-product-id: "유효하지 않은 상품 ID입니다"
       internal-error: "내부 서버 오류가 발생했습니다"
+      out-of-stock: "재고가 부족합니다"
+
