--- a/order-service.yml
+++ b/order-service.yml
@@ -67,10 +67,11 @@
       rabbit:
         enabled: false
 
-  # Order Service Exception Messages
-  order-service:
-    exception:
-      products-not-found: "주문 실패: 상품을 찾을 수 없습니다."
-      order-creation-decrease-failed: "주문 실패: 재고 부족 또는 일시적 오류일 수 있습니다."
+    # Order Service Exception Messages
+    order-service:
+      exception:
+        products-not-found: "주문 실패: 상품을 찾을 수 없습니다."
+        out-of-stock: "주문 실패: 재고가 부족합니다"
+        order-creation-decrease-failed: "주문 실패: 일시적 오류가 발생했습니다. 잠시 후 다시 시도해주세요"
 
       
