feat: catalog-service, order-service Eureka 설정

--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -48,7 +48,7 @@
   # Eureka Client Configuration
   eureka:
     instance:
-      instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+      instance-id: ${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
       hostname: localhost
       prefer-ip-address: false
     client:
