--- a/order-service.yml
+++ b/order-service.yml
@@ -42,7 +42,7 @@
   # Eureka Client Configuration
   eureka:
     instance:
-      instance-id: ${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
+      instance-id: ${spring.application.name}:${local.server.port}
       hostname: localhost
       prefer-ip-address: false
     client:
