--- a/order-service.yml
+++ b/order-service.yml
@@ -74,4 +74,13 @@
         out-of-stock: "주문 실패: 재고가 부족합니다"
         order-creation-decrease-failed: "주문 실패: 일시적 오류가 발생했습니다. 잠시 후 다시 시도해주세요"
 
+  # Feign Circuit Breaker 활성화 (필수!)
+  feign:
+    circuitbreaker:
+      enabled: true
+    client:
+      config:
+        default:
+          connectTimeout: 5000
+          readTimeout: 5000
       
