--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -6,6 +6,11 @@
   spring:
     application:
       name: catalog-service
+    
+    # Zipkin 설정
+    zipkin:
+      base-url: http://localhost:9411
+      enabled: true
 
     # Spring Security - Disabled
     autoconfigure:
@@ -65,6 +70,12 @@
 
   # Management Endpoints
   management:
+    tracing:
+      sampling:
+        probability: 1.0
+    zipkin:
+      tracing:
+        endpoint: http://localhost:9411/api/v2/spans
     endpoints:
       web:
         exposure:
