--- a/order-service.yml
+++ b/order-service.yml
@@ -7,6 +7,11 @@
     application:
       name: order-service
 
+    # Zipkin 설정
+    zipkin:
+      base-url: http://localhost:9411
+      enabled: true
+
     # Database Configuration
     datasource:
       driver-class-name: com.mysql.cj.jdbc.Driver
@@ -59,6 +64,12 @@
 
   # Management Endpoints
   management:
+    tracing:
+      sampling:
+        probability: 1.0
+    zipkin:
+      tracing:
+        endpoint: http://localhost:9411/api/v2/spans
     endpoints:
       web:
         exposure:
