--- a/user-service.yml
+++ b/user-service.yml
@@ -17,6 +17,11 @@
           format_sql: true
           dialect: org.hibernate.dialect.MySQLDialect
 
+    # Zipkin 설정
+    zipkin:
+      base-url: http://localhost:9411
+      enabled: true
+
     # Redis Configuration
     data:
       redis:
@@ -75,6 +80,12 @@
 
   # Management Endpoints
   management:
+    tracing:
+      sampling:
+        probability: 1.0  # 100% 샘플링 (개발: 1.0, 운영: 0.1)
+    zipkin:
+      tracing:
+        endpoint: http://localhost:9411/api/v2/spans
     endpoints:
       web:
         exposure:
