--- a/apigateway-service.yml
+++ b/apigateway-service.yml
@@ -99,7 +99,9 @@
   management:
     tracing:
       sampling:
-        probability: 1.0 
+        probability: 1.0
+      propagation:
+        type: b3
     zipkin:
       tracing:
         endpoint: http://localhost:9411/api/v2/spans
