--- a/order-service.yml
+++ b/order-service.yml
@@ -67,6 +67,8 @@
     tracing:
       sampling:
         probability: 1.0
+      propagation:
+        type: b3
     zipkin:
       tracing:
         endpoint: http://localhost:9411/api/v2/spans
