--- a/user-service.yml
+++ b/user-service.yml
@@ -82,7 +82,9 @@
   management:
     tracing:
       sampling:
-        probability: 1.0  # 100% 샘플링 (개발: 1.0, 운영: 0.1)
+        probability: 1.0
+      propagation:
+        type: b3
     zipkin:
       tracing:
         endpoint: http://localhost:9411/api/v2/spans
