feat: Zipkin 분산 트레이싱 설정

--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -49,6 +49,9 @@
     cloud:
       bus:
         enabled: true
+      openfeign:
+        micrometer:
+          enabled: true
 
   # Eureka Client Configuration
   eureka:
