--- a/apigateway-service.yml
+++ b/apigateway-service.yml
@@ -26,6 +26,9 @@
     cloud:
       bus:
         enabled: true
+      openfeign:
+        micrometer:
+          enabled: true
       gateway:
         routes:
           # Route 0: User Service - Public API
