--- a/order-service.yml
+++ b/order-service.yml
@@ -43,6 +43,9 @@
     cloud:
       bus:
         enabled: true
+      openfeign:
+        micrometer:
+          enabled: true
 
   # Eureka Client Configuration
   eureka:
