--- a/apigateway-service.yml
+++ b/apigateway-service.yml
@@ -80,6 +80,17 @@
               - RewritePath=/order-service/(?<segment>.*), /$\{segment}
               - JwtAuthentication
 
+          # Route 5: Catalog  Interaction Service - Protected (생성/수정/삭제는 인증 필요)
+          - id: catalog-interaction-service-protected
+            uri: lb://CATALOG-INTERACTION-SERVICE
+            predicates:
+              - Path=/catalog-interaction-service/**
+            filters:
+              - RemoveRequestHeader=Cookie
+              - RewritePath=/catalog-interaction-service/(?<segment>.*), /$\{segment}
+              - JwtAuthentication
+          
+
   # JWT Token Configuration
   token:
     access-expiration-time: 1800000
