feat: catalog-interaction-service, user-service.yml Redis Database 분산

--- a/catalog-interaction-service.yml
+++ b/catalog-interaction-service.yml
@@ -35,6 +35,14 @@
           format_sql: true
           dialect: org.hibernate.dialect.MySQLDialect
 
+    # Redis Configuration
+    data:
+      redis:
+        host: localhost
+        port: 6379
+        database: 1
+        timeout: 60000
+
     # RabbitMQ Configuration
     rabbitmq:
       host: 127.0.0.1
