--- a/user-service.yml
+++ b/user-service.yml
@@ -27,6 +27,7 @@
       redis:
         host: localhost
         port: 6379
+        database: 0
         timeout: 60000
 
     # RabbitMQ Configuration
