--- a/user-service.yml
+++ b/user-service.yml
@@ -17,7 +17,7 @@
           format_sql: true
           dialect: org.hibernate.dialect.MySQLDialect
 
-    # Zipkin 설정
+    # Zipkin
     zipkin:
       base-url: http://localhost:9411
       enabled: true
