feat: Order Service random.value 설정

--- a/order-service.yml
+++ b/order-service.yml
@@ -54,7 +54,8 @@
   # Eureka Client Configuration
   eureka:
     instance:
-      instance-id: ${spring.application.name}:${local.server.port}
+      # instance-id: ${spring.application.name}:${local.server.port}
+      instance-id: ${spring.application.name}:${random.value}
       hostname: localhost
       prefer-ip-address: false
     client:
