--- a/order-service.yml
+++ b/order-service.yml
@@ -22,7 +22,7 @@
     # JPA Configuration
     jpa:
       hibernate:
-        ddl-auto: update
+        ddl-auto: create
       show-sql: true
       properties:
         hibernate:
