--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -28,7 +28,7 @@
     # JPA Configuration
     jpa:
       hibernate:
-        ddl-auto: create
+        ddl-auto: update
       show-sql: true
       properties:
         hibernate:
