--- a/user-service.yml
+++ b/user-service.yml
@@ -10,7 +10,7 @@
     # JPA Configuration
     jpa:
       hibernate:
-        ddl-auto: create
+        ddl-auto: update
       show-sql: true
       properties:
         hibernate:
